[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI_Scenes/Level_Select.gd" type="Script" id=1]
[ext_resource path="res://UI_Scenes/2.gd" type="Script" id=2]
[ext_resource path="res://UI_Scenes/3.gd" type="Script" id=3]

[node name="Control" type="Control" groups=["Persist"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
margin_left = 64.0
margin_top = 64.0
margin_right = 1856.0
margin_bottom = 1032.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_right = 1792.0
margin_bottom = 320.0
size_flags_vertical = 3

[node name="1" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 355.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 3
text = "1"

[node name="Control" type="Control" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 359.0
margin_right = 714.0
margin_bottom = 320.0
size_flags_horizontal = 3

[node name="2" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 718.0
margin_right = 1073.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( -353, 50 )
size_flags_horizontal = 3
disabled = true
text = "2"
script = ExtResource( 2 )

[node name="Control2" type="Control" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 1077.0
margin_right = 1432.0
margin_bottom = 320.0
size_flags_horizontal = 3

[node name="3" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 1436.0
margin_right = 1792.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( -353, 50 )
size_flags_horizontal = 3
disabled = true
text = "3"
script = ExtResource( 3 )

[node name="Control" type="Control" parent="ColorRect/VBoxContainer"]
margin_top = 324.0
margin_right = 1792.0
margin_bottom = 644.0
size_flags_vertical = 3

[node name="4" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 648.0
margin_right = 1792.0
margin_bottom = 968.0
rect_pivot_offset = Vector2( 25, 25 )
size_flags_vertical = 3
text = "Back"

[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/4" to="." method="_on_4_pressed"]
